# school

./: .gitignore  README.md  manage.py  pyproject.toml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_subject.py  0003_user_about_user_foto.py  0003_user_about_user_foto_alter_user_role.py
accounts/templates/: login.html  register_teacher.html  users_list.html
accounts/templates/accounts/: accountant_update.html  create_subject.html  login.html  register_teacher.html  subjects.html  users_list.html
board/: admin.py  forms.py  models.py  urls.py  views.py
board/migrations/: 0001_initial.py  0002_alter_boardnews_options_alter_boardnews_image.py  0002_alter_boardnews_options_boardnews_author_and_more.py
board/templates/board/: board.html  board_message_detail.html  board_news.html  boardmessage_create.html
board/templates/board/partial/: comment_detail.html  comment_form.html
schedule/: models.py  urls.py  views.py
schedule/templates/schedule/: schedule.html
school/: settings.py  urls.py  wsgi.py
templates/: base.html
templates/includes/: footer.html  messages.html  navbar.html  navbar_teacher.html
work_hours/: admin.py  apps.py  filters.py  forms.py  models.py  urls.py  views.py
work_hours/migrations/: 0001_initial.py
work_hours/templates/work_hours/: all_work_hours.html  choose_school.html  create_work_hours.html  payment.html  payment_all.html  personal_page.html  pick_date.html  update_work_hours.html
